<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="person_name">Nombres</string>
    <string name="person_lastname">Apellidos</string>
    <string name="person_gender">Sexo:</string>
    <string name="person_man">Hombre</string>
    <string name="person_woman">Mujer</string>
    <string name="person_birth_date">Fecha de Nacimiento:</string>
    <string name="change_button">Cambiar</string>
    <string name="next_button">Siguiente</string>
    <string name="person_phone">Teléfono</string>
    <string name="person_email">Correo</string>
    <string name="person_country">país</string>
    <string name="person_city">Ciudad</string>
    <string name="person_address">Dirección</string>
    <string name="activity_1_name">Información Personal</string>
    <string name="activity_2_name">Información de Contacto</string>
    <string name="required">Requerido</string>
    <array name="level_schooling">
        <item>Grado de escolaridad</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universitaria</item>
        <item>Otro</item>
    </array>
    <string name="app_name">Agenda</string>
</resources>